# humanoid_robot

./: README.md
src/Kinetics/parallel/: CMakeLists.txt  Jacobian.cpp  Jacobian.h  Kinematics.cpp  Kinematics.h  Link.cpp  Link.h  LinkParameter.h  follow_link.cpp  leg_model.cpp  main.cpp  simulator_3D.cpp
src/Kinetics/serial/: Jacobian.cpp  Kinematics.cpp  Kinematics.h  Link.cpp  LinkParameter.h  a.out  data.txt  main.cpp  makefile
src/LIP/: coordinate.cpp  makefile  pattern_generation.cpp  rotation_walk.cpp  walking_segment.cpp
src/planning/Eigen/: CMakeCache.txt
src/planning/FootPlanner/: CMakeLists.txt  FootPlanner.cpp  FootPlanner.h  PlanCommon.h  main.cpp
src/planning/FootStepPlanner/: CMakeLists.txt  FootStepPlanner.cpp  FootStepPlanner.h  main.cpp
src/planning/ZMP_Planner/: ZMPPlanner.cpp  ZMPPlanner.h  main.cpp
